--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, target-densitydpi=device-dpi" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <script src="js/modernizr.min.js"></script>
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <title></title>
     <link rel='stylesheet' type='text/css' href='css/app.css'>
+    <script src="js/modernizr.min.js"></script>
+    <script src="cordova.js"></script>
     <script src='js/app.js' type='text/javascript'></script>
 </head>
 
