--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <link rel='stylesheet' type='text/css' href='css/app.css'>
     <script src="js/modernizr.min.js"></script>
-    <script src="cordova.js"></script>
+    <!--<script src="cordova.js"></script>-->
     <script src='js/app.js' type='text/javascript'></script>
 </head>
 
